Remove box shadow to fix cube transition flicker

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -617,9 +617,6 @@ a {
 			}
 
 			&:after {
-				-webkit-box-shadow: 0 0 88px 0px #081110;
-				-moz-box-shadow: 0 0 88px 0px #081110;
-				box-shadow: 0 0 60px 0px #081110;
 				bottom: 0;
 				content: "";
 				display: block;
